# MultiNet

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  ROADMAP.md  amse_plot.ipynb  build_and_run_eval_container.sh  dataset_config.txt  dataset_statistics_dev.json  harness_dataset_config.txt  openvla_openx_evaluation_results.json  pyproject.toml
src/eval/profiling/openpi/: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
src/eval/profiling/openpi/.github/: CODEOWNERS
src/eval/profiling/openpi/.github/workflows/: pre-commit.yml  test.yml
src/eval/profiling/openpi/docs/: docker.md  norm_stats.md  remote_inference.md
src/eval/profiling/openpi/examples/: inference.ipynb  policy_records.ipynb
src/eval/profiling/openpi/examples/aloha_real/: Dockerfile  README.md  compose.yml  constants.py  convert_aloha_data_to_lerobot.py  env.py  main.py  real_env.py  requirements.in  requirements.txt  robot_utils.py  video_display.py
src/eval/profiling/openpi/examples/aloha_sim/: Dockerfile  README.md  compose.yml  env.py  main.py  requirements.in  requirements.txt  saver.py
src/eval/profiling/openpi/examples/droid/: README.md  main.py
src/eval/profiling/openpi/examples/libero/: Dockerfile  README.md  compose.yml  convert_libero_data_to_lerobot.py  main.py  requirements.in  requirements.txt
src/eval/profiling/openpi/examples/simple_client/: Dockerfile  README.md  compose.yml  main.py  requirements.in  requirements.txt
src/eval/profiling/openpi/examples/ur5/: README.md
src/eval/profiling/openpi/scripts/: bpe_token_to_action_value_mappings.json  compute_norm_stats.py  correctpi0baseresults.py  map_bpe_actions.py  openx_inference.py  overcooked_inference.py  processing_action_tokenizer.py  procgen_inference.py  procgen_inference_fast.py  procgen_utils.py  serve_policy.py  test_openx_datasets.sh  test_overcooked_inference.py  train.py  train_test.py
src/eval/profiling/openpi/scripts/docker/: compose.yml  install_docker_ubuntu22.sh  install_nvidia_container_toolkit.sh  serve_policy.Dockerfile
src/eval/profiling/openpi/src/openpi/: conftest.py  transforms.py  transforms_test.py
src/eval/profiling/openpi/src/openpi/models/: gemma.py  gemma_fast.py  lora.py  lora_test.py  model.py  model_test.py  pi0.py  pi0_fast.py  pi0_test.py  siglip.py  tokenizer.py  tokenizer_test.py  vit.py
src/eval/profiling/openpi/src/openpi/policies/: aloha_policy.py  droid_policy.py  libero_policy.py  policy.py  policy_config.py  policy_test.py
src/eval/profiling/openpi/src/openpi/serving/: websocket_policy_server.py
src/eval/profiling/openpi/src/openpi/training/: utils.py  (+7 more)
src/v1/modules/Magma/: .gitignore  README.md  magma_action_requirements.txt  pyproject.toml  text_gen_requirements.txt  train.py
src/v1/modules/Magma/agents/game_agent/: app.py
src/v1/modules/Magma/agents/libero/: README.md  eval_magma_libero.py  libero_env_utils.py  libero_magma_utils.py  requirements.txt
src/v1/modules/Magma/agents/robot_traj/: app.py  app.pyi
src/v1/modules/Magma/agents/ui_agent/: app.py
src/v1/modules/Magma/data/: __init__.py  conversations.py  data_collator.py  data_item.py  dataset.py
src/v1/modules/Magma/data/ego4d/: __init__.py  data_utils.py  settings.yaml
src/v1/modules/Magma/data/epic/: __init__.py  data_utils.py  settings.yaml
src/v1/modules/Magma/data/llava/: __init__.py  data_utils.py
src/v1/modules/Magma/data/magma/: __init__.py  data_utils.py  settings.yaml
src/v1/modules/Magma/data/openx/: __init__.py  action_tokenizer.py  data_utils.py  materialize.py  settings.yaml
src/v1/modules/Magma/data/openx_magma/: __init__.py  data_utils.py  settings.yaml
src/v1/modules/Magma/data/seeclick/: __init__.py  data_utils.py
src/v1/modules/Magma/data/utils/: constants.py  som_tom.py  visual_trace.py  visual_tracker.py
src/v1/modules/Magma/data_configs/: llava1.5_665k.yaml  magma_820k.yaml  openx.yaml
src/v1/modules/Magma/magma/: configuration_magma.py  image_processing_magma.py  image_tower_magma.py  modeling_magma.py  processing_magma.py
src/v1/modules/Magma/scripts/: bfcl_inference.py  magma_openx_inference.py  magma_openx_quadrupedal_inference.py  magma_overcooked_inference.py  odinw_single_inference.py  overcooked_inference.py  overcooked_single_inference.py  piqa_inference.py  robovqa_inference.py  robovqa_single_inference.py  run_magma_eval.py  sqa3d_inference.py  sqa3d_single_inference.py
src/v1/modules/Magma/scripts/finetune/: finetune_magma_820k.sh
src/v1/modules/Magma/scripts/pretrain/: pretrain_openx.sh
src/v1/modules/Magma/server/: README.md  magma-server.sh  main.py  manage_magma_service.sh  test_api.py
src/v1/modules/Magma/server/docker/: Dockerfile  docker-compose.yml
src/v1/modules/Magma/server/native/: magma-api.service  manage_magma_service.sh  run_magma_api.sh
src/v1/modules/Magma/tools/lmms-eval-magma/: README.md  __init__.py  magma.py
src/v1/modules/Magma/tools/simplerenv-magma/: README.md
src/v1/modules/Magma/tools/som_tom/: demo.py
src/v1/modules/Magma/tools/video_preprocessing/: curate_list.py  run_clip_filtering.py  run_detect_segments.py
src/v1/modules/Magma/trainer/: __init__.py  trainer.py
src/v1/modules/Magma/trainer/deepspeed/: zero3.json
(+464 files in other folders)
